--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,5 +13,10 @@
         "ecmaVersion": "latest"
     },
     "rules": {
+        "no-console": "off",
+        "quotes": [
+            "error",
+            "single"
+        ]
     }
 }
