Adjust ESLint and Prettier settings

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,10 @@
         "quotes": [
             "error",
             "single"
+        ],
+        "indent": [
+            "error",
+            "tab"
         ]
     }
 }
