--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0"
+  },
+  "prettier": {
+    "tabWidth": 4,
+    "useTabs": true
   }
 }
