--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
     },
     "rules": {
         "no-console": "off",
+        "no-plusplus": "off",
         "quotes": [
             "error",
             "single"
