--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
     "rules": {
         "no-console": "off",
         "no-plusplus": "off",
+        "no-param-reassign": "off",
         "quotes": [
             "error",
             "single"
