--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,8 @@
         ],
         "indent": [
             "error",
-            "tab"
+            "tab",
+            { "SwitchCase": 1 }
         ]
     }
 }
