Set rule no-underscore-dangle to off

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
         "no-console": "off",
         "no-plusplus": "off",
         "no-param-reassign": "off",
+        "no-underscore-dangle": "off",
         "quotes": [
             "error",
             "single"
