--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
         "no-plusplus": "off",
         "no-param-reassign": "off",
         "no-underscore-dangle": "off",
+        "no-use-before-define": "off",
         "quotes": [
             "error",
             "single"
